--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -49,12 +49,11 @@ jobs:
         steps:
             - uses: actions/checkout@v3
             - name: System Basic Packages
-              run: apt-get update -y && apt-get install -y shellcheck sudo
+              run: apt-get update && apt-get install --yes --no-install-recommends shellcheck sudo adduser wixl fpc lazarus git
             - name: System information
               run: cat /etc/os-release; uname -a; echo "${PATH}"; cat /etc/sudoers; ls /etc/sudoers.d;
             - name: Normal user with sudo privileges
               run: |
-                  apt-get install --yes --no-install-recommends adduser wixl fpc lazbuild git
                   adduser --gecos "" --disabled-password user
                   usermod -aG sudo user
                   echo "%sudo ALL=(ALL) NOPASSWD: ALL" | tee /etc/sudoers.d/user
