--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -58,10 +58,14 @@ jobs:
                   adduser --gecos "" --disabled-password user
                   usermod -aG sudo user
                   echo "%sudo ALL=(ALL) NOPASSWD: ALL" | tee /etc/sudoers.d/user
+            - name: User home folder
+              run: |
                   mkdir --parents /home/user
                   chown --recursive user:user /home/user
+            - name: ppcross_install
+              run: |
                   wget https://raw.githubusercontent.com/Whonix/misc/main/ppcross_install
-                  chmod +x ./ppcross_install all
+                  chmod +x ./ppcross_install
                   ./ppcross_install all
             - name: Run Installer
               run: su -s /bin/bash user -- ./build-dummy.sh
