--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -23,8 +23,13 @@ jobs:
               uses: actions/checkout@v3
               with:
                   repository: Kicksecure/developer-meta-files
+                  path: developer-meta-files
             - name: Test2
               run: ls -la
+            - name: Test3
+              run: ls -la ../
+            - name: Test4
+              run: ls -la ../developer-meta-files
             #- name: System Basic Packages
               #run: |
                   #apt-get update
