--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -23,7 +23,7 @@ jobs:
               uses: actions/checkout@v3
               with:
                   repository: Kicksecure/developer-meta-files
-                  path: developer-meta-files
+                  path: ../developer-meta-files
             - name: Test2
               run: ls -la
             - name: Test3
