--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -16,15 +16,20 @@ jobs:
         steps:
             - name: Checkout main repository
               uses: actions/checkout@v3
-            - name: Checkout developer-meta-files
-              uses: actions/checkout@v3
-              with:
-                  repository: Kicksecure/developer-meta-files
-                  path: developer-meta-files
+            # - name: Checkout developer-meta-files
+            #   uses: actions/checkout@v3
+            #   with:
+            #       repository: Kicksecure/developer-meta-files
+            #       path: developer-meta-files
             - name: System Basic Packages
               run: |
                   apt-get update
                   apt-get install --yes --no-install-recommends wine fpc adduser shellcheck lazarus git ca-certificates libfile-mimeinfo-perl
+            - name: Install Packages from Debian trixie
+              run: |
+                  echo -e 'deb https://deb.debian.org/debian trixie main' > /etc/apt/sources.list.d/trixie.list"
+                  apt-get update
+                  apt-get install --yes --no-install-recommends fp-units-win-base fp-units-win-rtl fp-units-win-fcl fp-units-win-misc
             - name: System information
               run: |
                   whoami
@@ -37,8 +42,8 @@ jobs:
               run: chown --recursive user:user /__w/Whonix-Installer
             - name: Build and run test.exe
               run: su -s /bin/bash user -- ./test.sh
-            - name: ppcross_install
-              run: ./developer-meta-files/usr/bin/ppcross_install all
+            # - name: ppcross_install
+            #   run: ./developer-meta-files/usr/bin/ppcross_install all
             - name: Build Installer
               run: su -s /bin/bash user -- ./build-dummy.sh
             - name: ShellCheck
