--- a/WhonixInstaller.lpi
+++ b/WhonixInstaller.lpi
@@ -4,7 +4,7 @@
     <Version Value="12"/>
     <General>
       <SessionStorage Value="InProjectDir"/>
-      <Title Value="WhonixSetup"/>
+      <Title Value="WhonixInstaller"/>
       <Scaled Value="True"/>
       <ResourceType Value="res"/>
       <UseXPManifest Value="True"/>
@@ -46,23 +46,23 @@
     </RequiredPackages>
     <Units>
       <Unit>
-        <Filename Value="WhonixSetup.lpr"/>
+        <Filename Value="WhonixInstaller.lpr"/>
         <IsPartOfProject Value="True"/>
       </Unit>
       <Unit>
-        <Filename Value="whonixsetup_main.pas"/>
+        <Filename Value="whonixinstaller_main.pas"/>
         <IsPartOfProject Value="True"/>
-        <ComponentName Value="SetupForm"/>
+        <ComponentName Value="InstallerForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <UnitName Value="WhonixSetup_Main"/>
+        <UnitName Value="WhonixInstaller_Main"/>
       </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
     <Version Value="11"/>
     <Target>
-      <Filename Value="WhonixSetup"/>
+      <Filename Value="WhonixInstaller"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
