--- a/WhonixInstaller.lpi
+++ b/WhonixInstaller.lpi
@@ -25,11 +25,11 @@
     </General>
     <VersionInfo>
       <UseVersionInfo Value="True"/>
-      <MajorVersionNr Value="16"/>
-      <MinorVersionNr Value="0"/>
-      <RevisionNr Value="9"/>
-      <BuildNr Value="8"/>
-      <StringTable Comments="Installer for Whonix" CompanyName="ENCRYPTED SUPPORT LP" FileDescription="Installer for Whonix" InternalName="WhonixSetup" LegalCopyright="Copyright (C) 2023" OriginalFilename="WhonixInstaller-XFCE-16.0.9.8" ProductName="Whonix" ProductVersion="XFCE-16.0.9.8"/>
+      <MajorVersionNr Value="1"/>
+      <MinorVersionNr Value="2"/>
+      <RevisionNr Value="3"/>
+      <BuildNr Value="4"/>
+      <StringTable Comments="Installer for Whonix" CompanyName="ENCRYPTED SUPPORT LP" FileDescription="Installer for Whonix" InternalName="WhonixSetup" LegalCopyright="Copyright (C) 2023" OriginalFilename="WhonixInstaller-XYZ-1.2.3.4.exe" ProductName="Whonix" ProductVersion="XYZ-1.2.3.4"/>
     </VersionInfo>
     <BuildModes>
       <Item Name="Default" Default="True"/>
