--- a/WhonixInstaller.lpi
+++ b/WhonixInstaller.lpi
@@ -29,7 +29,7 @@
       <MinorVersionNr Value="2"/>
       <RevisionNr Value="3"/>
       <BuildNr Value="4"/>
-      <StringTable Comments="Installer for Whonix" CompanyName="ENCRYPTED SUPPORT LP" FileDescription="Installer for Whonix" InternalName="WhonixSetup" LegalCopyright="Copyright (C) 2023" OriginalFilename="WhonixInstaller-XYZ-1.2.3.4.exe" ProductName="Whonix" ProductVersion="XYZ-1.2.3.4"/>
+      <StringTable Comments="Installer for Whonix" CompanyName="ENCRYPTED SUPPORT LP" FileDescription="Installer for Whonix" InternalName="WhonixInstaller" LegalCopyright="Copyright (C) 2023" OriginalFilename="WhonixInstaller-XYZ-1.2.3.4.exe" ProductName="Whonix" ProductVersion="XYZ-1.2.3.4"/>
     </VersionInfo>
     <BuildModes>
       <Item Name="Default" Default="True"/>
