--- a/src/WhonixInstaller.lpi
+++ b/src/WhonixInstaller.lpi
@@ -26,9 +26,6 @@
     <VersionInfo>
       <UseVersionInfo Value="True"/>
       <MajorVersionNr Value="1"/>
-      <MinorVersionNr Value="0"/>
-      <RevisionNr Value="0"/>
-      <BuildNr Value="0"/>
       <StringTable Comments="Installer for Whonix" CompanyName="ENCRYPTED SUPPORT LP" FileDescription="Installer for Whonix" InternalName="WhonixInstaller" LegalCopyright="Copyright (C) 2023" OriginalFilename="WhonixInstaller-XYZ-1.2.3.4.exe" ProductName="Whonix" ProductVersion="[WHONIX_VERSION]"/>
     </VersionInfo>
     <BuildModes>
@@ -64,11 +61,12 @@
   <CompilerOptions>
     <Version Value="11"/>
     <Target>
-      <Filename Value="WhonixInstaller"/>
+      <Filename Value="../build/WhonixInstaller"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
-      <UnitOutputDirectory Value="lib/$(TargetCPU)-$(TargetOS)"/>
+      <Libraries Value="../build"/>
+      <UnitOutputDirectory Value="../build/lib/$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <Linking>
       <Debugging>
