--- a/src/WhonixInstaller.lpi
+++ b/src/WhonixInstaller.lpi
@@ -14,13 +14,13 @@
       </XPManifest>
       <Icon Value="0"/>
       <Resources Count="7">
-        <Resource_0 FileName="WhonixInstallerBannerLinux.jpg" Type="RCDATA" ResourceName="BANNERLINUX"/>
-        <Resource_1 FileName="WhonixInstallerBannerWindows.jpg" Type="RCDATA" ResourceName="BANNERWINDOWS"/>
-        <Resource_2 FileName="LICENSE" Type="RCDATA" ResourceName="LICENSE"/>
-        <Resource_3 FileName="DUMMY_RES_FILE" Type="RCDATA" ResourceName="SCRIPT"/>
-        <Resource_4 FileName="WhonixOvaInfo.ini" Type="RCDATA" ResourceName="OVAINFO"/>
-        <Resource_5 FileName="DUMMY_RES_FILE" Type="RCDATA" ResourceName="VBOX"/>
-        <Resource_6 FileName="DUMMY_RES_FILE" Type="RCDATA" ResourceName="STARTER"/>
+        <Resource_0 FileName="../WhonixInstallerBannerLinux.jpg" Type="RCDATA" ResourceName="BANNERLINUX"/>
+        <Resource_1 FileName="../WhonixInstallerBannerWindows.jpg" Type="RCDATA" ResourceName="BANNERWINDOWS"/>
+        <Resource_2 FileName="../LICENSE" Type="RCDATA" ResourceName="LICENSE"/>
+        <Resource_3 FileName="../DUMMY_RES_FILE" Type="RCDATA" ResourceName="SCRIPT"/>
+        <Resource_4 FileName="../WhonixOvaInfo.ini" Type="RCDATA" ResourceName="OVAINFO"/>
+        <Resource_5 FileName="../DUMMY_RES_FILE" Type="RCDATA" ResourceName="VBOX"/>
+        <Resource_6 FileName="../DUMMY_RES_FILE" Type="RCDATA" ResourceName="STARTER"/>
       </Resources>
     </General>
     <VersionInfo>
